--- a/uwsgi-taileizi.ini
+++ b/uwsgi-taileizi.ini
@@ -1,30 +1,33 @@
 [uwsgi]
 # socket采用端口的形式配置，官方更推荐用socket文件的形式，如果采用socket文件形式配置，下面的nginx的配置上也要做相应的修改
 # socket          = /path/to/your/project/mysite.sock
-socket = :8001
+http = 0.0.0.0:8001
 # 项目目录路径（绝对路径）
-chdir = ./
+chdir = /var/www/TaiWeb
 # Django's 中的 wsgi.py 文件地址，. 表示一层目录
 module = TaiWeb.wsgi
-wsgi-file = TaiWeb/wsgi.py
+# wsgi-file = TaiWeb/wsgi.py
+static-map = /static=/var/www/TaiWeb/static
+static-map = /uploads=/var/www/TaiWeb/uploads
 # 虚拟环境路径（官方更推荐用虚拟环境, docker环境则不需要）
 # home = /var/www/taileizi_env
 # 主进程
 master = True
 # 多站模式
-vhost = true
-# 多站模式时不设置入口模块和文件
-no-stie = true
+vhost = True
+# 支持线程启动
+enable-threads = True  
 # 子进程数
-workers = 2
+workers = 1
 reload-mercy = 10
-enable-threads = True
 # 子进程数
-vacuum = true
+vacuum = True
 max-requests = 5000
 limit-as = 512
-buffer-sizi = 30000
+post-buffering = 65536
+# 不设置会导致上传大文件失败
+buffer-size = 65536
 # pid文件，用于下面的脚本启动、停止该进程
 pidfile = /var/run/uwsgi8001.pid
 # uwsgi9090进程日志文件
-daemonize = /var/log/uwsgi9090.log
+daemonize = uwsgi8001.log
