部署相关文件

--- a/uwsgi-taileizi.ini
+++ b/uwsgi-taileizi.ini
@@ -27,7 +27,7 @@ limit-as = 512
 post-buffering = 65536
 # 不设置会导致上传大文件失败
 buffer-size = 65536
-# pid文件，用于下面的脚本启动、停止该进程
-pidfile = /var/run/uwsgi8001.pid
-# uwsgi9090进程日志文件
-daemonize = uwsgi8001.log
+# pid文件，用于下面的脚本启动、停止该进程（docker部署注释该项）
+# pidfile = /var/run/uwsgi8001.pid
+# uwsgi9090进程日志文件（docker部署注释该项）
+# daemonize = uwsgi8001.log
