--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM daocloud.io/python:2.7
 MAINTAINER mudong  <blog.scmud.com>
 ENV PYPYTHONUNBUFFERED 1
-ADD taileizi.tar /var/www/taileizi
-WORKDIR /var/www/taileizi
+ADD TaiWeb.tar /var/www/TaiWeb
+WORKDIR /var/www/TaiWeb
 RUN pip install  -r requirements.txt -i http://mirrors.aliyun.com/pypi/simple/ --trusted-host mirrors.aliyun.com
